src/scss/sections/_hero.scss
@import '../variables';

.hero-section {
  height: 800px;
  overflow: hidden;
  background-image: url('/images/css/tropical-bg.png');
  background-position: center bottom;
  background-repeat: repeat-x;
  background-size: 100%;
  margin-bottom: $section-bottom-margin;
  border-bottom: 1px solid $gray-light;

  .hero-text {
    padding: 3 * $spacer 0 0 0;
    font-weight: 500;
    font-size: 3rem;
  }

  .hero-sub {
    font-weight: 300;
    font-size: 1.2rem;
    line-height: 2rem !important;
    margin-bottom: 1rem;
    color: $body-text;
  }

  .hero-image {
    @include screen-shadow();
    border-radius: 5px;
    border: 1px solid $gray-light;

    @include media-breakpoint-up(xs) {
      width: 360px;
    }

    @include media-breakpoint-up(sm) {
      width: 480px;
    }

    @include media-breakpoint-up(md) {
      width: 900px;
    }
  }
}

@include media-breakpoint-down(sm) {
  .hero-section {
    margin-bottom: 2rem;
    height: 550px;

    .hero-text {
      font-size: 2.5rem;
      padding: $spacer 0 0 0;
    }

    .hero-sub {
      font-size: 1.1rem;
    }
  }
}

